<resources>
    <string name="app_name">ToDoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_to_do">To Do</string>
    <string name="menu_old_task">Old Tasks</string>
    <string name="menu_active_task">Active Tasks</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">cancel</string>
    <string name="add_note_warning">Please add your note description</string>
    <string name="add_note_title_warning">Please add your note title</string>
    <string name="empty_text">Please Select Data</string>
    <string name="empty_add_text">There is no Note for this day</string>
    <string name="update">Update Note</string>
    <string name="delete">Delete Note</string>
    <string name="empty_text_old_fragment">There is no old tasks to display</string>
    <string name="empty_text_active_fragment">There is no active tasks to display</string>
    <string name="succeded_add">Added Successfully</string>
    <string name="succeded_update">update Successfully</string>
    <string name="logout_title">Log Out</string>
    <string name="sign_out_title">Sign Out</string>
</resources>
