<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_to_do"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_to_do" />
        <item
            android:id="@+id/nav_old_task"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_old_task" />
        <item
            android:id="@+id/nav_active_task"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_active_task" />
    </group>

    <item android:title="@string/logout_title">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sign_out_title" />
        </menu>
    </item>

</menu>
